# alignai-sdk-python

./: .gitignore  .pre-commit-config.yaml  lint_format.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
alignai/: api_client.py  buffer_storage.py  client.py  config.py  utils.py  validate.py
alignai/ingestion/v1alpha/: event_pb2.py  ingestion_pb2.py  ingestion_pb2.pyi
alignai/integration/: llama_index.py
alignai/proto/ingestion/v1alpha/: __init__.py
