[tool.poetry]
name = "alignai"
version = "0.3.0.dev1"
description = "Python SDK for Align AI"
authors = ["Coxwave <tech@coxwave.com>"]
readme = "README.md"
packages = [{include = "alignai"}]


[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
requests = "^2.31.0"
protobuf = "^5.28.1"
googleapis-googleapis-protocolbuffers-python = "^28.1.0.1.20240827201746+e7f8d366f526"
googleapis-googleapis-protocolbuffers-pyi = "^28.1.0.1.20240827201746+e7f8d366f526"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
black = "^24.8.0"
mypy = "^1.11.2"
isort = "^5.13.2"
pre-commit = "^3.5.0"
packaging = "^23.2"


[[tool.poetry.source]]
name = "buf"
url = "https://buf.build/gen/python"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
exclude = ["alignai/ingestion"]
target-version = "py38"

[tool.black]
line-length = 120
target-version = ["py38"]
exclude = '''
/(
  alignai\/ingestion
  | \.venv
  | venv
)/
'''

[tool.isort]
profile = "black"
py_version=38
skip_glob = ["alignai/ingestion", "venv", ".venv"]
